fix blurry pictures

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ a {
   max-width: 125px;
   width: 100%;
   height: 169px;
-
+  image-rendering: pixelated;
   border-radius: 5px;
 }
 
